# sbi_uhecr_radio_recon

./: CITATION.cff  LICENSE  README.md  pyproject.toml
env/: environment.yml  requirements.txt
notebooks/: Example-0.ipynb  Example-1-Reproduce_figures_in_Macias_etal_2025.ipynb  diagnostics_subset.npz  encoder_best.pt
notebooks/mock_training_data/: event_00000.npy  event_00001.npy  event_00002.npy  event_00003.npy  event_00004.npy  event_00005.npy  event_00006.npy  event_00007.npy  event_00008.npy  event_00009.npy  event_00010.npy  event_00011.npy  event_00012.npy  event_00013.npy  event_00014.npy  event_00015.npy  event_00016.npy  event_00017.npy  event_00018.npy  event_00019.npy  event_00020.npy  event_00021.npy  event_00022.npy  event_00023.npy  event_00024.npy  event_00025.npy  event_00026.npy  event_00027.npy  event_00028.npy  event_00029.npy  event_00030.npy  event_00031.npy  event_00032.npy  event_00033.npy  event_00034.npy  event_00035.npy  event_00036.npy  event_00037.npy  event_00038.npy  event_00039.npy  (+2960 more)
src/sbi_uhecr_radio_recon/: __init__.py  angular_resolution.py  cli.py  diagnostics.py  generate_mock_training_data.py  read_data.py  runner_lampe_uhecr_radio.py  temperature_calibration.py  utils.py
